# sdk-python

./: .release-please-manifest.json  CHANGELOG.md  README.md  release-please-config.json
sdk/: CHANGELOG.md  LICENSE  README.md  kiota-lock.json  pyproject.toml  rixl_client.py
sdk/feeds/: .gitlab-ci.yml  .travis.yml  README.md  feeds_request_builder.py  pyproject.toml  setup.py  tox.ini
sdk/feeds/.openapi-generator/: FILES
sdk/feeds/item/: with_feed_item_request_builder.py
sdk/feeds/rixl_feeds_sdk/: __init__.py  api_client.py  configuration.py
sdk/feeds/test/: test_chapter.py  test_feeds_api.py  test_file.py  test_file_status.py  test_github_com_qeeqez_api_db_sqlc_plan_type.py  test_github_com_qeeqez_api_internal_errors_error_response.py  test_github_com_qeeqez_api_internal_videos_video_response.py  test_image.py  test_pagination_paginated_response_post.py  test_pagination_pagination.py  test_post.py  test_post_type.py
sdk/images/: .gitlab-ci.yml  .travis.yml  README.md  images_request_builder.py  pyproject.toml  setup.py  tox.ini
sdk/images/.openapi-generator/: FILES
sdk/images/item/: with_image_item_request_builder.py
sdk/images/rixl_images_sdk/: __init__.py  api_client.py  configuration.py
sdk/models/: audio_track.py  audio_track_delete.py  chapter.py  file.py  file_status.py  image.py  post.py  post_type.py  subtitle.py  subtitle_delete.py  update_chapters_request.py  update_chapters_response.py  video.py  video_upload_init_request.py
sdk/videos/: .gitlab-ci.yml  .travis.yml  README.md  pyproject.toml  setup.py  tox.ini  videos_request_builder.py
(+110 files in other folders)
