[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "rixl-python"
version = "0.2.2"
description = "Python client for the RIXL API."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
dependencies = [
  "microsoft-kiota-bundle==1.5.0",
]

[tool.setuptools]
py-modules = ["rixl_client"]

[tool.setuptools.packages.find]
where = ["."]
include = ["feeds*", "images*", "videos*", "models*"]
